--- a/students.html
+++ b/students.html
@@ -392,6 +392,25 @@ function scrollToTop() {
 </div>
 
 
+<!-- كارت 1 -->
+      <div class="card" data-title="شقة محمد حسن" data-meta="الموقع:  جوار مخبز رجب الوليديه "  data-price="950/شهري" data-gender="ذكر"data-phone="201128768348"><!-- رقم واتساب خاص بالكارت -->>
+  <div class="thumb slider">
+    <button class="prev-btn">&#10094;</button>
+<img src="محمد/لقطة شاشة 2025-08-24 020640.png" class="slider-img active" alt="صورة 1">
+              <img src="محمد/لقطة شاشة 2025-08-24 020706.png" class="slider-img" alt="صورة 2">
+              <img src="محمد/لقطة شاشة 2025-08-24 020835.png" class="slider-img" alt="صورة 3">
+              <img src="محمد/لقطة شاشة 2025-08-24 020848.png" class="slider-img" alt="صورة 3">
+    <button class="next-btn">&#10095;</button>
+
+    <div class="status">متاحة</div>
+    <div class="price-tag">950/جنيه</div>
+  </div>
+  <div class="card-body">
+    <h5 class="card-title">ولاد خطوات من ميدان اسماء الله الحسنى بجوار مخبز رجب-  </h5>
+            <p class="card-text"> خطوات من ميدان اسماء الله الحسنى بجوار مخبز رجب.استهلاك 1300طول السنه</p>
+    <p class="meta">الموقع:  اسماء الله الحسنى</p>
+  <div class="card-actions">
+     <button class="btn ghost" onclick="bookWhatsApp(this)">حجز</button>
   </div>
 </div>
 </div>
