--- a/students.html
+++ b/students.html
@@ -461,6 +461,111 @@ function scrollToTop() {
 </div>
 </div>
 
+<!-- كارت 1 -->
+      <div class="card" data-title="شقة محمد حسن" data-meta="الموقع: شارع السبيل "  data-price="1000/شهري" data-gender="انثى"data-phone="201128768348"><!-- رقم واتساب خاص بالكارت -->>
+  <div class="thumb slider">
+    <button class="prev-btn">&#10094;</button>
+<img src="محمد/IMG-20250902-WA0028.jpg" class="slider-img active" alt="صورة 1">
+              <img src="محمد/IMG-20250902-WA0029.jpg" class="slider-img" alt="صورة 2">
+              <img src="محمد/IMG-20250902-WA0030.jpg" class="slider-img" alt="صورة 2">
+              <img src="محمد/IMG-20250902-WA0031.jpg" class="slider-img" alt="صورة 2">
+              <img src="محمد/IMG-20250902-WA0032.jpg" class="slider-img" alt="صورة 2">
+    <button class="next-btn">&#10095;</button>
+
+    <div class="status">متاحة</div>
+    <div class="price-tag">1000/جنيه</div>
+  </div>
+  <div class="card-body">
+    <h5 class="card-title">بنات شارع السبيل الشقة فيها ٢اوضه ثنائي دور ارضى  </h5>
+            <p class="card-text"> بنات شارع السبيل الشقة فيها ٢اوضه ثنائي دور ارضى</p>
+    <p class="meta"> الموقع: شارع السبيل</p>
+  <div class="card-actions">
+     <button class="btn ghost" onclick="bookWhatsApp(this)">حجز</button>
+  </div>
+</div>
+</div>
+
+
+<!-- كارت 1 -->
+      <div class="card" data-title="شقة محمد حسن شقه مفروشة ف تامينات السيارات العمومي بنات 
+فيها 8 سراير " data-meta="الموقع:  التامينات "  data-price="1100/شهري" data-gender="انثى"data-phone="201128768348"><!-- رقم واتساب خاص بالكارت -->>
+  <div class="thumb slider">
+    <button class="prev-btn">&#10094;</button>
+              <img src="محمد/لقطة شاشة 2025-09-02 225143.png" class="slider-img active" alt="صورة 1">
+              <img src="محمد/لقطة شاشة 2025-09-02 225216.png" class="slider-img" alt="صورة 2">
+              <img src="محمد/لقطة شاشة 2025-09-02 225250.png" class="slider-img" alt="صورة 2">
+              <img src="محمد/لقطة شاشة 2025-09-02 225115.png" class="slider-img" alt="صورة 2">
+    <button class="next-btn">&#10095;</button>
+
+    <div class="status">متاحة</div>
+    <div class="price-tag">1100/جنيه</div>
+  </div>
+  <div class="card-body">
+    <h5 class="card-title">شقه مفروشة ف تامينات السيارات العمومي بنات 
+فيها 8 سراير  </h5>
+            <p class="card-text">شقه مفروشة ف تامينات السيارات العمومي بنات 
+فيها 8 سراير </p>
+    <p class="meta"> الموقع:  التامينات</p>
+  <div class="card-actions">
+     <button class="btn ghost" onclick="bookWhatsApp(this)">حجز</button>
+  </div>
+</div>
+</div>
+
+<!-- كارت 1 -->
+      <div class="card" data-title="قة ف تامينات السيارات
+ فيها 6 سراير  ب 1000 السرير" data-meta="الموقع:  التامينات "  data-price="1000/شهري" data-gender="انثى"data-phone="201128768348"><!-- رقم واتساب خاص بالكارت -->>
+  <div class="thumb slider">
+    <button class="prev-btn">&#10094;</button>
+              <img src="محمد/لقطة شاشة 2025-09-02 230603.png" class="slider-img active" alt="صورة 1">
+              <img src="محمد/لقطة شاشة 2025-09-02 230626.png" class="slider-img" alt="صورة 2">
+              <img src="محمد/لقطة شاشة 2025-09-02 230645.png" class="slider-img" alt="صورة 2">
+              <img src="محمد/لقطة شاشة 2025-09-02 230722.png" class="slider-img" alt="صورة 2">
+              <img src="محمد/لقطة شاشة 2025-09-02 230810.png" class="slider-img" alt="صورة 2">
+    <button class="next-btn">&#10095;</button>
+
+    <div class="status">متاحة</div>
+    <div class="price-tag">1100/جنيه</div>
+  </div>
+  <div class="card-body">
+    <h5 class="card-title">شقة ف تامينات السيارات
+ فيها 6 سراير  ب 1000 السرير</h5>
+            <p class="card-text">شقة ف تامينات السيارات
+ فيها 6 سراير  ب 1000 السرير</p>
+    <p class="meta"> الموقع:  التامينات</p>
+  <div class="card-actions">
+     <button class="btn ghost" onclick="bookWhatsApp(this)">حجز</button>
+  </div>
+</div>
+</div>
+
+
+<!-- كارت 1 -->
+      <div class="card" data-title="شقة أبراج الزراعيين برج د ٧ سراير ١٢٠٠" data-meta="الموقع:  التامينات "  data-price="1200/شهري" data-gender="انثى"data-phone="201128768348"><!-- رقم واتساب خاص بالكارت -->>
+  <div class="thumb slider">
+    <button class="prev-btn">&#10094;</button>
+              <img src="محمد/لقطة شاشة 2025-09-02 231633.png" class="slider-img active" alt="صورة 1">
+              <img src="محمد/لقطة شاشة 2025-09-02 231602.png" class="slider-img" alt="صورة 2">
+              <img src="محمد/لقطة شاشة 2025-09-02 231543.png" class="slider-img" alt="صورة 2">
+              <img src="محمد/لقطة شاشة 2025-09-02 231513.png" class="slider-img" alt="صورة 2">
+              <img src="محمد/لقطة شاشة 2025-09-02 231442.png" class="slider-img" alt="صورة 2">
+              <img src="محمد/لقطة شاشة 2025-09-02 231333.png" class="slider-img" alt="صورة 2">
+    <button class="next-btn">&#10095;</button>
+
+    <div class="status">متاحة</div>
+    <div class="price-tag">1200/جنيه</div>
+  </div>
+  <div class="card-body">
+    <h5 class="card-title">شقة أبراج الزراعيين برج د ٧ سراير ١٢٠٠</h5>
+            <p class="card-text">شقة أبراج الزراعيين برج د ٧ سراير ١٢٠٠</p>
+    <p class="meta"> الموقع:  التامينات</p>
+  <div class="card-actions">
+     <button class="btn ghost" onclick="bookWhatsApp(this)">حجز</button>
+  </div>
+</div>
+</div>
+
+
       <!-- كارت 2 -->
       <div class="card" data-title="شقة روف " data-meta="الموقع: مصنع سيد " data-price="1250/شهري" data-gender="ذكر"data-phone="201096917526"><!-- رقم واتساب خاص بالكارت -->>
   <div class="thumb slider">
