تحديث جديد للمشروع

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <!-- Google AdSense -->
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5576405028824306" crossorigin="anonymous"></script>
 </head>
-
+<script>(s=>{s.dataset.zone=9820868,s.src='https://vemtoutcheeg.com/tag.min.js'})([document.documentElement, document.body].filter(Boolean).pop().appendChild(document.createElement('script')))</script>
 <body>
 
 <!-- Header -->
