تحديث جديد للمشروع

--- a/students.html
+++ b/students.html
@@ -156,7 +156,7 @@ function scrollToTop() {
     <h2>سكن الطلبه المتاحة</h2>
     <div class="grid">
       <!-- كارت 1 -->
-      <div class="card" data-title="شقةدور 12 روف" data-meta="الموقع: مصنع سيد "  data-price="1000/شهري" data-gender="ذكر">
+      <div class="card" data-title="شقةدور 12 روف" data-meta="الموقع: مصنع سيد "  data-price="1000/شهري" data-gender="ذكر"data-phone="201096917526"><!-- رقم واتساب خاص بالكارت -->>
   <div class="thumb slider">
     <button class="prev-btn">&#10094;</button>
 <img src="mahmud.img/12.img/IMG-20250730-WA0128.jpg" class="slider-img active" alt="صورة 1">
