تحديث الموقع أو تعديل الملفات

--- a/apartments.html
+++ b/apartments.html
@@ -137,6 +137,40 @@ function scrollToTop() {
       
 <!-- 🔹 كارت شقة -->
 <div class="card" 
+     data-title="منزل ف شارع شاهين" 
+     data-meta="الموقع: ديروط - شارع شاهين"  
+     data-price="3,600,000 جنيه" 
+     data-status="متاحة">
+
+  <!-- 🔹 صور الشقة (سلايدر) -->
+  <div class="thumb slider">
+    <button class="prev-btn">&#10094;</button>
+
+    <img src="صور/صورة واتساب بتاريخ 2025-09-05 في 15.01.50_52c8b9c2.jpg" class="slider-img active" alt="صورة 1">
+
+    <button class="next-btn">&#10095;</button>
+
+    <!-- 🔹 الحالة والسعر -->
+    <div class="status">متاحة</div>
+    <div class="price-tag">3,600,000 جنيه</div>
+  </div>
+
+  <!-- 🔹 تفاصيل الشقة -->
+  <div class="card-body">
+    <h5 class="card-title">منزل نص قيراط اربع ادوار تشطيب لوكس</h5>
+    <p class="card-text">منزل اربع ادوار في شارع متفرع من شارع شاهين تشطيب لوكس وتقسيمه رائعه نصف قيراط</p>
+    <p class="meta">الموقع: ديروط -  شارع شاهين غرب مدرسة الزراعه/p>
+
+    <!-- 🔹 زر الحجز -->
+    <div class="card-actions">
+      <button class="btn ghost" onclick="bookWhatsApp(this)">حجز عبر واتساب</button>
+    </div>
+  </div>
+</div>
+
+
+<!-- 🔹 كارت شقة -->
+<div class="card" 
      data-title="شقة ديروط ابو جبل " 
      data-meta="الموقع: ديروط -  برج الاصيل "  
      data-price="1,750,000 جنيه" 
@@ -168,6 +202,7 @@ function scrollToTop() {
     </div>
   </div>
 </div>
+
 
 <!-- 🔹 كارت شقة -->
 <div class="card" 
