--- a/a1,.html
+++ b/a1,.html
@@ -7,26 +7,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <!-- العنوان (واحد بس) -->
-  <title>افندي اسيوط  | محلات للايجار  والبيع</title>
+  <title> Haary  | Harry news </title>
 
-  <!-- وصف الموقع لمحركات البحث -->
-  <meta name="description" content="افندي اسيوط  بيوفرلك شقق للإيجار والبيع، أراضي، محلات، مواد غذائية، مستلزمات طبية، موبايلات، أجهزة كهربائية وملابس.">
+<!-- Website description for search engines -->
+<meta name="description" content="Haary News is a comprehensive news website delivering the latest breaking news, local and global updates, live coverage of sports, politics, technology, entertainment, and society — 24/7.">
 
-  <!-- كلمات مفتاحية -->
-  <meta name="keywords" content="شقق, شقق للإيجار, شقق للبيع, مواد غذائية, مستلزمات طبية, عربيات للبيع, أجهزة كهربائية,  افندي اسيوط, عقارات, محلات">
-  <meta name="author" content="افندي اسيوط ">
+  <!-- SEO Keywords -->
+<meta name="keywords" content="news, breaking news, world news, politics, sports, technology, entertainment, economy, Haary News, Egypt news, local news, global updates">
+
+<!-- Author -->
+<meta name="author" content="Haary News Team">
+
 
   <!-- Open Graph (الصورة والوصف للسوشيال ميديا + جوجل) -->
-  <meta property="og:title" content="افندي اسيوط  | شقق للإيجار والبيع">
-  <meta property="og:description" content="افندي اسيوط  بيوفرلك شقق للبيع والإيجار + أراضي + محلات + مواد غذائية + مستلزمات طبية + موبايلات + أجهزة كهربائية + ملابس.">
+  <meta property="og:title" content="Haary News | Latest Breaking News and Updates">
+  <meta property="og:description" content="Haary News delivers the latest breaking news from Egypt and around the world — live coverage of politics, sports, technology, entertainment, and society 24/7.">
   <meta property="og:image" content="https://username.github.io/project/image/WhatsApp%20Image%202025-07-29%20at%205.16.14%20AM.jpeg">
   <meta property="og:url" content="https://sakan-afandy.github.io/">
   <meta property="og:type" content="website">
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="افندي اسيوط  | شقق للإيجار والبيع">
-  <meta name="twitter:description" content="افندي اسيوط  بيوفرلك كل احتياجاتك من شقق، محلات، مواد غذائية، مستلزمات طبية، موبايلات وأجهزة كهربائية.">
+  <meta property="og:title" content="Haary News | Latest Breaking News and Updates">
+  <meta property="og:description" content="Haary News delivers the latest breaking news from Egypt and around the world — live coverage of politics, sports, technology, entertainment, and society 24/7.">
   <meta name="twitter:image" content="https://username.github.io/project/image/WhatsApp%20Image%202025-07-29%20at%205.16.14%20AM.jpeg">
 
   <!-- Google Fonts -->
@@ -41,322 +44,177 @@
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5576405028824306" crossorigin="anonymous"></script>
 </head>
 <body>
+<!DOCTYPE html>
+<html lang="ar" dir="rtl">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>Haary News  </title>
+  <style>
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+      font-family: "Cairo", sans-serif;
+    }
 
-<header class="topbar">
-  <div class="container nav">
-    <a href="index.html" class="brand">
-  <div class="brand-badge">🏠</div>
-  <span> افندي اسيوط</span>
-</a>
-    <div class="menu-toggle" onclick="toggleMenu()">☰</div>
-    <nav class="menu" id="menu">
-      <a href="index.html">الرئيسية</a>
-      <a href="apartments.html">الشقق</a>
-      <a href="students.html">سكن طلبه</a>
-      <a href="villas.html">اراضي</a>
-      <a href="commercial.html">محلات</a>
-      <a href="car.html">سيارات</a>
-    </nav>
-  </div>
+    body {
+      background: #f8f8f8;
+      color: #222;
+      line-height: 1.8;
+    }
+
+    header {
+      background: #1e1e2f;
+      color: #fff;
+      padding: 15px 0;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      flex-wrap: wrap;
+    }
+
+    header h1 {
+      font-size: 22px;
+      margin-right: 20px;
+    }
+
+    .ad-link {
+      text-decoration: none;
+      color: #fff;
+      background: #25D366;
+      padding: 8px 14px;
+      border-radius: 8px;
+      margin-left: 20px;
+      font-weight: bold;
+      display: flex;
+      align-items: center;
+      gap: 6px;
+      transition: 0.3s;
+    }
+
+    .ad-link:hover {
+      background: #1ebe5b;
+    }
+
+    .article-container {
+      max-width: 900px;
+      margin: 40px auto;
+      background: #fff;
+      border-radius: 12px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+      overflow: hidden;
+      padding: 20px;
+    }
+
+    .article-container img {
+      width: 100%;
+      border-radius: 10px;
+      margin-bottom: 20px;
+    }
+
+    .article-container h2 {
+      color: #1e1e2f;
+      margin-bottom: 10px;
+      font-size: 26px;
+    }
+
+    .article-meta {
+      color: #888;
+      font-size: 14px;
+      margin-bottom: 20px;
+    }
+
+    .article-content {
+      color: #333;
+      font-size: 16px;
+      text-align: justify;
+    }
+
+    .share-buttons {
+      margin-top: 25px;
+    }
+
+    .share-buttons a {
+      display: inline-block;
+      margin: 5px;
+      text-decoration: none;
+      padding: 8px 14px;
+      border-radius: 6px;
+      color: #fff;
+      font-size: 14px;
+      transition: 0.3s;
+    }
+
+    .share-buttons .whatsapp {
+      background: #25D366;
+    }
+
+    .share-buttons .facebook {
+      background: #1877f2;
+    }
+
+    .share-buttons a:hover {
+      opacity: 0.8;
+    }
+
+    footer {
+      background: #1e1e2f;
+      color: #ccc;
+      text-align: center;
+      padding: 15px;
+      margin-top: 40px;
+      font-size: 14px;
+    }
+  </style>
+</head>
+
+<body>
+<header>
+  <h1>
+    📰 <a href="index.html" class="logo-link">Haary News</a>
+  </h1>
+  <a href="https://wa.me/201097919027?text=مرحباً%20أريد%20ان%20أعلن%20عن%20منتجي%20الخاص" 
+     target="_blank" class="ad-link">
+    📢 للإعلان عبر واتساب
+  </a>
 </header>
 
 
-<!-- نفس كودك الأساسي -->
+  <div class="article-container">
+    <img src="https://picsum.photos/900/400?random=9" alt="صورة الخبر">
 
-        <!-- 🔹 بوكس الفلاتر -->
-<div class="filters-box">
-  <!-- فلتر المنطقة -->
-  <div class="filter-item">
-    <label for="areaFilter">اختر المنطقة:</label>
-    <select id="areaFilter" onchange="applyFilters()">
-      <option value="الكل">الكل</option>
-      <option value="مصنع سيد">مصنع سيد  </option>
-      <option value="الوليديه">الوليديه </option>
-      <option value="مكتبات">مكتبات</option>
-      <option value="سيتي">سيتي</option>
-      <option value="النميس">االنميس</option>
-      <option value="الهلالي">الهلالي</option>
-    </select>
-  </div>
+    <h2>انطلاق مؤتمر التكنولوجيا 2025</h2>
+    <div class="article-meta">🗓️ 17 أكتوبر 2025 | ✍️ بقلم: فريق Haary News</div>
 
-  <!-- فلتر السعر -->
-  <div class="filter-item">
-    <label for="priceFilter">اختر السعر:</label>
-    <select id="priceFilter" onchange="applyFilters()">
-      <option value="الكل">الكل</option>
-      <option value="1000">حتى 1000 جنيه</option>
-      <option value="2000">حتى 2000 جنيه</option>
-      <option value="3000">حتى 3000 جنيه</option>
-    </select>
-  </div>
+    <div class="article-content">
+      <p>
+        شهدت العاصمة اليوم انطلاق فعاليات مؤتمر التكنولوجيا 2025 بمشاركة شركات عالمية رائدة
+        في مجالات الذكاء الاصطناعي والروبوتات وتكنولوجيا المستقبل. المؤتمر يهدف إلى استعراض
+        أحدث التطورات في عالم التكنولوجيا والتحول الرقمي، مع التركيز على الابتكارات التي
+        يمكن أن تغير شكل الحياة اليومية خلال السنوات القادمة.
+      </p>
+      <p>
+        وقد صرح وزير الاتصالات بأن مصر تسعى لأن تكون مركزًا إقليميًا للابتكار التكنولوجي
+        وريادة الأعمال، وأن الحكومة تعمل على دعم الشركات الناشئة في هذا المجال.
+      </p>
+      <p>
+        من المتوقع أن يستمر المؤتمر لمدة ثلاثة أيام، يتخلله جلسات نقاش وورش عمل حول
+        تطبيقات الذكاء الاصطناعي، وأمن المعلومات، وتطوير البرمجيات، بمشاركة خبراء من
+        أكثر من 20 دولة.
+      </p>
+    </div>
 
-  <!-- فلتر النوع -->
-  <div class="filter-item">
-    <label for="genderFilter">اختر النوع:</label>
-    <select id="genderFilter" onchange="applyFilters()">
-      <option value="الكل">الكل</option>
-      <option value="ذكر">ذكر</option>
-      <option value="أنثى">أنثى</option>
-    </select>
-  </div>
-</div>
-
-
-<!-- زر الرجوع للأعلى -->
-<button onclick="scrollToTop()" id="backToTop" title="الرجوع للأعلى">↑</button>
-
-<style>
-/* شكل الزر */
-#backToTop {
-  position: fixed;
-  bottom: 30px;
-  right: 30px;
-  z-index: 99;
-  background-color: #2563eb;
-  color: white;
-  border: none;
-  padding: 12px 16px;
-  border-radius: 50%;
-  font-size: 20px;
-  cursor: pointer;
-  display: none; /* مخفي في البداية */
-  transition: all 0.3s ease;
-  box-shadow: 0px 4px 8px rgba(0,0,0,0.2);
-}
-#backToTop:hover {
-  background-color: #1e40af;
-}
-</style>
-
-<script>
-// إظهار/إخفاء الزر عند النزول
-window.onscroll = function() {
-  let btn = document.getElementById("backToTop");
-  if (document.body.scrollTop > 200 || document.documentElement.scrollTop > 200) {
-    btn.style.display = "block";
-  } else {
-    btn.style.display = "none";
-  }
-};
-
-// عند الضغط يرجع للأعلى بسلاسة
-function scrollToTop() {
-  window.scrollTo({top: 0, behavior: 'smooth'});
-}
-</script>
-
-<!-- نفس كروت الشقق -->
-<section class="section">
-  <div class="container">
-    <h2> المحلات المتاحه   </h2>
-    <div class="grid">
-
-      
-<!-- 🔹 كارت شقة -->
-<div class="card" 
-     data-title="محل داخل سيتي مول بشارع المحطة في قلب أسيوط" 
-     data-meta="الموقع: اسيوط -   سيتي مول "  
-     data-price="1,500,000 جنيه" 
-     data-status="متاحة">
-
-  <!-- 🔹 صور الشقة (سلايدر) -->
-  <div class="thumb slider">
-    <button class="prev-btn">&#10094;</button>
-
-    <img src="" class="slider-img active" alt="صورة 1">
-
-    <button class="next-btn">&#10095;</button>
-
-    <!-- 🔹 الحالة والسعر -->
-    <div class="status">متاحة</div>
-    <div class="price-tag">1,500,000 جنيه</div>
-  </div>
-
-  <!-- 🔹 تفاصيل الشقة -->
-  <div class="card-body">
-    <h5 class="card-title">محل داخل سيتي مول بشارع المحطة في قلب أسيوط</h5>
-    <p class="card-text">محل بموقع متميز اسيوط قريب من الخدمات وبسعر ممتاز.</p>
-    <p class="meta">الموقع: سيي مول -  اسيوط</p>
-
-    <!-- 🔹 زر الحجز -->
-    <div class="card-actions">
-      <button class="btn ghost" onclick="bookWhatsApp(this)">حجز عبر واتساب</button>
+    <div class="share-buttons">
+      <a href="https://wa.me/?text=شاهد%20هذا%20الخبر%20على%20Haary%20News:%20https://example.com/article.html"
+         target="_blank" class="whatsapp">📲 شارك عبر واتساب</a>
+      <a href="https://www.facebook.com/sharer/sharer.php?u=https://example.com/article.html"
+         target="_blank" class="facebook">📘 شارك عبر فيسبوك</a>
     </div>
   </div>
-</div>
 
-      
-
-
-<script>
-let currentSlide = 0;
-let slideImages = [];
-
-function openDetails(title, meta, images, price) {
-  slideImages = images;
-  currentSlide = 0;
-
-  document.getElementById("modalTitle").innerText = title;
-  document.getElementById("modalMeta").innerText = meta;
-  document.getElementById("modalPrice").innerText = price;
-
-  document.getElementById("sliderImg").src = slideImages[currentSlide];
-
-  document.getElementById("detailsModal").style.display = "block";
-}
-
-function closeDetails() {
-  document.getElementById("detailsModal").style.display = "none";
-}
-
-function changeSlide(direction) {
-  currentSlide += direction;
-  if (currentSlide < 0) currentSlide = slideImages.length - 1;
-  if (currentSlide >= slideImages.length) currentSlide = 0;
-  document.getElementById("sliderImg").src = slideImages[currentSlide];
-}
-
-// إغلاق عند الضغط خارج المودال
-window.onclick = function(e) {
-  if (e.target == document.getElementById("detailsModal")) {
-    closeDetails();
-  }
-}
-</script>
-
-<script>
-function filterByArea() {
-  let selectedArea = document.getElementById("areaFilter").value;
-  let cards = document.querySelectorAll(".grid .card");
-
-  cards.forEach(card => {
-    let area = card.getAttribute("data-area");
-    if (selectedArea === "الكل" || area === selectedArea) {
-      card.style.display = "block";
-    } else {
-      card.style.display = "none";
-    }
-  });
-}
-</script>
-<script>
-function bookWhatsApp(button) {
-  let card = button.closest('.card');
-  let title = card.dataset.title;
-  let meta = card.dataset.meta;
-  let price = card.dataset.price;
-  
-  // رقمك بصيغة دولية بدون +
-  let phone = "201097919027";
-  
-  let message = `اهلا أريد معرفة تفاصيل  ${title} - ${meta} - السعر: ${price}`;
-  let url = `https://wa.me/${phone}?text=${encodeURIComponent(message)}`;
-  
-  window.open(url, '_blank');
-}
-</script>
-<script>
-document.querySelectorAll('.thumb.slider').forEach(slider => {
-  let images = slider.querySelectorAll('img');
-  let index = 0;
-  let autoSlide;
-
-  function showSlide(i) {
-    images.forEach(img => img.classList.remove('active'));
-    images[i].classList.add('active');
-  }
-
-  function nextSlide() {
-    index = (index + 1) % images.length;
-    showSlide(index);
-  }
-
-  function prevSlide() {
-    index = (index - 1 + images.length) % images.length;
-    showSlide(index);
-  }
-
-  function startAuto() {
-    stopAuto();
-    autoSlide = setInterval(nextSlide, 3000);
-  }
-
-  function stopAuto() {
-    clearInterval(autoSlide);
-  }
-
-  slider.querySelector('.next-btn').addEventListener('click', () => {
-    nextSlide();
-    startAuto();
-  });
-  slider.querySelector('.prev-btn').addEventListener('click', () => {
-    prevSlide();
-    startAuto();
-  });
-
-  // دعم السحب (Swipe) على الموبايل
-  let startX = 0;
-  slider.addEventListener('touchstart', e => startX = e.touches[0].clientX);
-  slider.addEventListener('touchend', e => {
-    let endX = e.changedTouches[0].clientX;
-    if (startX - endX > 50) { nextSlide(); startAuto(); } // سحب لليسار
-    if (endX - startX > 50) { prevSlide(); startAuto(); } // سحب لليمين
-  });
-
-  startAuto();
-});
-</script> 
-<script>
-function filterByArea() {
-  let selectedArea = document.getElementById("areaFilter").value;
-  let cards = document.querySelectorAll(".grid .card");
-
-  cards.forEach(card => {
-    let meta = card.getAttribute("data-meta"); // "الموقع: حي الجامعة"
-    let area = meta.replace("الموقع: ", "").trim();
-
-    if (selectedArea === "الكل" || area === selectedArea) {
-      card.style.display = "block";
-    } else {
-      card.style.display = "none";
-    }
-  });
-}
-</script> 
-<script>
-function applyFilters() {
-  let area = document.getElementById("areaFilter").value;
-  let price = document.getElementById("priceFilter").value;
-  let gender = document.getElementById("genderFilter").value;
-
-  document.querySelectorAll(".card").forEach(card => {
-    let cardArea = card.getAttribute("data-meta").replace("الموقع: ", "").trim();
-    let cardPrice = parseInt(card.getAttribute("data-price"));
-    let cardGender = card.getAttribute("data-gender");
-
-    let show = true;
-
-    // فلتر المنطقة
-    if (area !== "الكل" && cardArea !== area) {
-      show = false;
-    }
-
-    // فلتر السعر
-    if (price !== "الكل" && cardPrice > parseInt(price)) {
-      show = false;
-    }
-
-    // فلتر النوع
-    if (gender !== "الكل" && cardGender !== gender) {
-      show = false;
-    }
-
-    card.style.display = show ? "block" : "none";
-  });
-}
-</script>
-<script>
-  function toggleMenu() {
-    document.getElementById("menu").classList.toggle("active");
-  }
-</script>
+  <footer>
+    © 2025 Haary News - جميع الحقوق محفوظة
+  </footer>
+</body>
+</html>
