--- a/a2.html
+++ b/a2.html
@@ -49,7 +49,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Haary News  </title>
+ <title>Haary News  </title>
   <style>
     * {
       box-sizing: border-box;
@@ -174,11 +174,12 @@
   <h1>
     📰 <a href="index.html" class="logo-link">Haary News</a>
   </h1>
-  <a href="https://wa.me/201097919027?text=مرحباً%20أريد%20ان%20أعلن%20عن%20منتجي%20الخاص" 
+  <a href="https://wa.me/201097919027?text=Hello%2C%20I%20would%20like%20to%20advertise%20my%20product" 
      target="_blank" class="ad-link">
-    📢 للإعلان عبر واتساب
+    Contact Us
   </a>
 </header>
+
 
 
   <div class="article-container">
@@ -213,8 +214,8 @@
     </div>
   </div>
 
-  <footer>
-    © 2025 Haary News - جميع الحقوق محفوظة
-  </footer>
+<footer>
+  © 2025 Haary News - All Rights Reserved
+</footer>
 </body>
 </html>
