--- a/index.html
+++ b/index.html
@@ -177,11 +177,12 @@
   <h1>
     📰 <a href="index.html" class="logo-link">Haary News</a>
   </h1>
-  <a href="https://wa.me/201097919027?text=مرحباً%20أريد%20ان%20أعلن%20عن%20منتجي%20الخاص" 
+  <a href="https://wa.me/201097919027?text=Hello%2C%20I%20would%20like%20to%20advertise%20my%20product" 
      target="_blank" class="ad-link">
-    📢 للإعلان عبر واتساب
+    Contact Us
   </a>
 </header>
+
 
   <section class="news-container">
     <div class="news-box">
@@ -221,8 +222,8 @@
     </div>
   </section>
 
-  <footer>
-    © 2025 Haary News - جميع الحقوق محفوظة
-  </footer>
+<footer>
+  © 2025 Haary News - All Rights Reserved
+</footer>
 </body>
 </html>
