--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
       <div class="news-content">
         <h3>انطلاق مؤتمر التكنولوجيا 2025</h3>
         <p>بدأ اليوم مؤتمر التكنولوجيا العالمي بمشاركة شركات كبرى للكشف عن أحدث الابتكارات.</p>
-        <a href="a1,.html" class="read-more">اقرأ المزيد</a>
+        <a href="a1.html" class="read-more">Read More</a>
       </div>
     </div>
 
@@ -199,7 +199,8 @@
       <div class="news-content">
         <h3>فوز فريق برشلونة في الكلاسيكو</h3>
         <p>حقق فريق برشلونة فوزًا مثيرًا في الكلاسيكو بنتيجة 3-1 أمام ريال مدريد.</p>
-        <a href="a2.html" class="read-more">اقرأ المزيد</a>
+        <a href="a1.html" class="read-more">Read More</a>
+
       </div>
     </div>
 
@@ -208,7 +209,7 @@
       <div class="news-content">
         <h3>اكتشاف كوكب جديد شبيه بالأرض</h3>
         <p>العلماء يعلنون عن اكتشاف كوكب جديد يحتمل وجود حياة عليه على بعد 40 سنة ضوئية.</p>
-        <a href="a3.html" class="read-more">اقرأ المزيد</a>
+        <a href="a1.html" class="read-more">Read More</a>
       </div>
     </div>
 
@@ -217,7 +218,7 @@
       <div class="news-content">
         <h3>تحسن الاقتصاد المصري خلال الربع الأخير</h3>
         <p>تقرير البنك المركزي يشير إلى تحسن في مؤشرات الاقتصاد المصري وارتفاع معدل النمو.</p>
-        <a href="a4.html" class="read-more">اقرأ المزيد</a>
+        <a href="a1.html" class="read-more">Read More</a>
       </div>
     </div>
   </section>
