تحديث موقع Haary News

--- a/index.html
+++ b/index.html
@@ -188,8 +188,8 @@
     <div class="news-box">
       <img src="img/صورة واتساب بتاريخ 2025-10-16 في 18.52.02_16c0d88c.jpg" alt="">
       <div class="news-content">
-        <h3>انطلاق مؤتمر التكنولوجيا 2025</h3>
-        <p>بدأ اليوم مؤتمر التكنولوجيا العالمي بمشاركة شركات كبرى للكشف عن أحدث الابتكارات.</p>
+        <h3>celia imrie fart on celebrity traitors | i just farted” during celebrity traitors — fans go wild</h3>
+        <p>celia imrie fart on celebrity traitors | i just farted” during celebrity traitors — fans go wild</p>
         <a href="a1,.html" class="read-more">Read More</a>
       </div>
     </div>
