تحديث واجهة الموقع وإضافة ميزات جديدة

--- a/blabn.html
+++ b/blabn.html
@@ -10,26 +10,26 @@
   <title> منيو بلبن | منيو بلبن </title>
 
 <!-- Website description for search engines -->
-<meta name="description" content="منيو بلبن is a comprehensive news website delivering the latest breaking news, local and global updates, live coverage of sports, politics, technology, entertainment, and society — 24/7.">
+<meta name="description" content="منيو بلبن ">
 
   <!-- SEO Keywords -->
-<meta name="keywords" content="news, breaking news, world news, politics, sports, technology, entertainment, economy, Haary News, Egypt news, local news, global updates">
+<meta name="keywords" content="منيو بلبن">
 
 <!-- Author -->
-<meta name="author" content="منيو بلبن Team">
+<meta name="author" content="منيو بلبن ">
 
 
   <!-- Open Graph (الصورة والوصف للسوشيال ميديا + جوجل) -->
-  <meta property="og:title" content="Haary News | Latest Breaking News and Updates">
-  <meta property="og:description" content="Haary News delivers the latest breaking news from Egypt and around the world — live coverage of politics, sports, technology, entertainment, and society 24/7.">
+  <meta property="og:title" content="منيو بلبن اصل اللبن | المنيو الخاص بنا">
+  <meta property="og:description" content="منيو بلبن اصلي في ديروط يقدم أشهى وألذ منتجات الألبان مثل الرز بلبن، البمبوظة، الكشري بلبن، الآيس كريم، القشطوطة، هبه دبي، وأم علي. جرب الآن طعم الجودة والتميز!">
   <meta property="og:image" content="https://username.github.io/project/image/WhatsApp%20Image%202025-07-29%20at%205.16.14%20AM.jpeg">
   <meta property="og:url" content="https://sakan-afandy.github.io/">
   <meta property="og:type" content="website">
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta property="og:title" content="منيو بلبن | Latest Breaking News and Updates">
-  <meta property="og:description" content="Haary News delivers the latest breaking news from Egypt and around the world — live coverage of politics, sports, technology, entertainment, and society 24/7.">
+  <meta property="og:title" content="منيو بلبن | اكتشف أشهى منتجات الألبان في ديروط">
+  <meta property="og:description" content="استمتع بأفضل تجربة لبنية مع منيو بلبن في ديروط. نقدم لك مجموعة متنوعة من منتجات الألبان الطازجة واللذيذة مثل الرز بلبن، البمبوظة، الكشري بلبن، الآيس كريم، القشطوطة، هبه دبي، وأم علي. جرب الآن طعم الجودة والتميز!">
   <meta name="twitter:image" content="https://username.github.io/project/image/WhatsApp%20Image%202025-07-29%20at%205.16.14%20AM.jpeg">
 
   <!-- Google Fonts -->
@@ -66,7 +66,7 @@
 <!-- Hero -->
 <section class="hero">
   <div class="hero-text">
-    <h1>أحلى منتجات الألبان</h1>
+    <h1>أحلى منتجات الألبان ف ديروط</h1>
     <p>جودة عالية – طعم لا يقاوم</p>
     <a href="#menu" class="hero-btn">شوف المنيو</a>
   </div>
@@ -280,7 +280,7 @@
       <span>70 جنيه</span>
       <button class="order-btn"
         onclick="orderWhatsApp(this)"
-        data-name="كشري توينز"
+        data-name="كشري نوتيلا"
         data-price="70">اطلب الآن</button>
     </div>
 
