update website and backend

--- a/blabn.html
+++ b/blabn.html
@@ -91,7 +91,7 @@
     <div class="card">
       <img src="imgs/رز بلبن لوتس.jpeg">
       <h3>رز بلبن لوتس</h3>
-      <span>25 جنيه</span>
+      <span>50 جنيه</span>
       <button class="order-btn"
         onclick="orderWhatsApp(this)"
         data-name="رز بلبن لوتس"
@@ -101,7 +101,7 @@
     <div class="card">
       <img src="imgs/رز بلبن لوتس.jpeg">
       <h3> رز بلبن سادة </h3>
-      <span>30 جنيه</span>
+      <span>20 جنيه</span>
       <button class="order-btn"
         onclick="orderWhatsApp(this)"
         data-name=" رز بلبن سادة "
@@ -171,7 +171,7 @@
         <div class="card">
       <img src="imgs/رز بلبن لوتس.jpeg">
       <h3> رز بلبن نوتيلا </h3>
-      <span>50جنيه</span>
+      <span>45 جنيه</span>
       <button class="order-btn"
         onclick="orderWhatsApp(this)"
         data-name=" رز بلبن نوتيلا "
@@ -190,20 +190,183 @@
 
         <div class="card">
       <img src="imgs/رز بلبن لوتس.jpeg">
-      <h3>  </h3>
-      <span> جنيه</span>
+      <h3> رز بلبن ديناميت </h3>
+      <span>60 جنيه</span>
       <button class="order-btn"
         onclick="orderWhatsApp(this)"
-        data-name="  "
-        data-price=" ">اطلب الآن</button>
+        data-name=" رز بلبن ديناميت  "
+        data-price="60 ">اطلب الآن</button>
     </div>
+
+            <div class="card">
+      <img src="imgs/رز بلبن لوتس.jpeg">
+      <h3> رز بلبن قشطه مكسرات </h3>
+      <span>75 جنيه</span>
+      <button class="order-btn"
+        onclick="orderWhatsApp(this)"
+        data-name=" رز بلبن قشطه مكسرات  "
+        data-price="75 ">اطلب الآن</button>
+    </div>
+
+                <div class="card">
+      <img src="imgs/رز بلبن لوتس.jpeg">
+      <h3> رز بلبن  الجريمه </h3>
+      <span>65 جنيه</span>
+      <button class="order-btn"
+        onclick="orderWhatsApp(this)"
+        data-name=" رز بلبن  الجريمه  "
+        data-price="65 ">اطلب الآن</button>
+    </div>
+
+                    <div class="card">
+      <img src="imgs/رز بلبن لوتس.jpeg">
+      <h3> رز بلبن  مقلوبه </h3>
+      <span>65 جنيه</span>
+      <button class="order-btn"
+        onclick="orderWhatsApp(this)"
+        data-name=" رز بلبن  مقلوبه  "
+        data-price="65 ">اطلب الآن</button>
+    </div>
+
+                        <div class="card">
+      <img src="imgs/رز بلبن لوتس.jpeg">
+      <h3> رز بلبن  ايس كريم مكسرات وقشطه </h3>
+      <span>75 جنيه</span>
+      <button class="order-btn"
+        onclick="orderWhatsApp(this)"
+        data-name=" رز بلبن  ايس كريم مكسرات وقشطه  "
+        data-price="75 ">اطلب الآن</button>
+    </div>
+
+         <div class="card">
+      <img src="imgs/رز بلبن لوتس.jpeg">
+      <h3> رز بلبن مشنكاح لوتس </h3>
+      <span>75 جنيه</span>
+      <button class="order-btn"
+        onclick="orderWhatsApp(this)"
+        data-name=" رز بلبن مشنكاح لوتس  "
+        data-price="75 ">اطلب الآن</button>
+    </div>
+
+        <div class="card">
+      <img src="imgs/رز بلبن لوتس.jpeg">
+      <h3> رز بلبن مشنكاح مانجا </h3>
+      <span>75 جنيه</span>
+      <button class="order-btn"
+        onclick="orderWhatsApp(this)"
+        data-name=" رز بلبن مشنكاح مانجا  "
+        data-price="75 ">اطلب الآن</button>
+    </div>
+
+                                <div class="card">
+      <img src="imgs/رز بلبن لوتس.jpeg">
+      <h3> رز بلبن مشنكاح ايس ومكسرات </h3>
+      <span>70 جنيه</span>
+      <button class="order-btn"
+        onclick="orderWhatsApp(this)"
+        data-name=" رز بلبن مشنكاح ايس ومكسرات  "
+        data-price="70 ">اطلب الآن</button>
+    </div>
+
+                                <div class="card">
+      <img src="imgs/رز بلبن لوتس.jpeg">
+      <h3> رز بلبن  الغيبوبه </h3>
+      <span>70 جنيه</span>
+      <button class="order-btn"
+        onclick="orderWhatsApp(this)"
+        data-name=" رز بلبن الغيبوبه   "
+        data-price="70 ">اطلب الآن</button>
+    </div>
+
+
+        <div class="card">
+      <img src="imgs/رز بلبن لوتس.jpeg">
+      <h3> رز بلبن  المزاجنجيه </h3>
+      <span>75 جنيه</span>
+      <button class="order-btn"
+        onclick="orderWhatsApp(this)"
+        data-name=" رز بلبن المزاجنجيه  " 
+        data-price="75 ">اطلب الآن</button>
+    </div>
+
+         <div class="card">
+      <img src="imgs/رز بلبن لوتس.jpeg">
+      <h3> رز بلبن  طبطبه </h3>
+      <span>70 جنيه</span>
+      <button class="order-btn"
+        onclick="orderWhatsApp(this)"
+        data-name=" رز بلبن طبطبه  "
+        data-price="70 ">اطلب الآن</button>
+    </div>
+
+             <div class="card">
+      <img src="imgs/رز بلبن لوتس.jpeg">
+      <h3> رز بلبن  قنبله </h3>
+      <span>70 جنيه</span>
+      <button class="order-btn"
+        onclick="orderWhatsApp(this)"
+        data-name=" رز بلبن قنبله  " 
+        data-price="70 ">اطلب الآن</button>
+    </div>
+
+                 <div class="card">
+      <img src="imgs/رز بلبن لوتس.jpeg">
+      <h3>  رز بلبن  قنبله المانجو </h3>
+      <span>85 جنيه</span>
+      <button class="order-btn"
+        onclick="orderWhatsApp(this)"
+        data-name=" رز بلبن قنبله النمانجو  "
+        data-price="85 ">اطلب الآن</button>
+    </div>
+
+                 <div class="card">
+      <img src="imgs/رز بلبن لوتس.jpeg">
+      <h3> رز بلبن  قشطه وعسل </h3>
+      <span>70 جنيه</span>
+      <button class="order-btn"
+        onclick="orderWhatsApp(this)"
+        data-name=" رز بلبن قشطه وعسل  " 
+        data-price="70 ">اطلب الآن</button>
+    </div>
+
+        <div class="card">
+      <img src="imgs/رز بلبن لوتس.jpeg">
+      <h3> رز بلبن  رز بلبن فواكهه </h3>
+      <span>60 جنيه</span>
+      <button class="order-btn"
+        onclick="orderWhatsApp(this)"
+        data-name=" رز بلبن فواكهه  " 
+        data-price="60 ">اطلب الآن</button>
+    </div>
+
+            <div class="card">
+      <img src="imgs/رز بلبن لوتس.jpeg">
+      <h3> طبق السعاده  </h3>
+      <span>90 جنيه</span>
+      <button class="order-btn"
+        onclick="orderWhatsApp(this)"
+        data-name=" طبق السعاده  "  
+        data-price="90 ">اطلب الآن</button>
+    </div>
+
+                <div class="card">
+      <img src="imgs/رز بلبن لوتس.jpeg">
+      <h3>  رز بلبن سوبر لوكس  </h3>
+      <span>100 جنيه</span>
+      <button class="order-btn"
+        onclick="orderWhatsApp(this)"
+        data-name=" رز بلبن سوبر لوكس  "  
+        data-price="100 ">اطلب الآن</button>
+    </div>
+
+
 
 
   </div>
 </section>
 
 
-<!-- 🍯 حلويات شرقية -->
+<!-- 🍯  البمبوظه -->
 <section class="menu-section" id="eastern">
   <h3 class="menu-title">المبمبوظه  </h3>
 
@@ -258,6 +421,16 @@
         data-name=" بمبوظة نوتيلا "
         data-price="70 ">اطلب الآن</button>
     </div>
+
+            <div class="card">
+      <img src="imgs/بمبوظه.jpeg">
+      <h3>بمبوظة مانجا </h3>
+      <span> 70جنيه</span>
+      <button class="order-btn"
+        onclick="orderWhatsApp(this)"
+        data-name=" بمبوظة مانجا "
+        data-price="70 ">اطلب الآن</button>
+    </div>
   </div>
 </section>
 
@@ -274,7 +447,7 @@
 
         <div class="card">
       <img src="imgs/كشري بلبن.jpeg">
-      <h3> كشري توينز</h3>
+      <h3> كشري نوتيلا</h3>
       <span>70 جنيه</span>
       <button class="order-btn"
         onclick="orderWhatsApp(this)"
@@ -284,7 +457,7 @@
 
             <div class="card">
       <img src="imgs/كشري بلبن.jpeg">
-      <h3>كشري أوريو </h3>
+      <h3>كشري أوريو نوتيلا</h3>
       <span> 85جنيه</span>
       <button class="order-btn"
         onclick="orderWhatsApp(this)"
@@ -330,6 +503,27 @@
         data-name="كشري فواكه"
         data-price="90">اطلب الآن</button>
     </div>
+                <div class="card">
+      <img src="imgs/كشري بلبن.jpeg">
+      <h3> كشري كندر</h3>
+      <span> 75</span>
+      <button class="order-btn"
+        onclick="orderWhatsApp(this)"
+        data-name="كشري كندر"
+        data-price="75">اطلب الآن</button>
+    </div>
+
+                <div class="card">
+      <img src="imgs/كشري بلبن.jpeg">
+      <h3> كشري مانجو</h3>
+      <span> 75 جنيه</span>
+      <button class="order-btn"
+        onclick="orderWhatsApp(this)"
+        data-name="كشري مانجو"
+        data-price="75">اطلب الآن</button>
+    </div>
+
+
 
 
   </div>
@@ -344,11 +538,11 @@
     <div class="card">
       <img src="imgs/ايسكريم.jpeg">
       <h3>كوب آيس كريم صغير </h3>
-      <span> 30جنيه</span>
+      <span> 20 جنيه</span>
       <button class="order-btn"
         onclick="orderWhatsApp(this)"
         data-name=" كوب آيس كريم صغير "
-        data-price="30">اطلب الآن</button>
+        data-price="20">اطلب الآن</button>
     </div>
 
         <div class="card">
@@ -363,32 +557,32 @@
 
         <div class="card">
       <img src="imgs/ايسكريم.jpeg">
-      <h3>كوز آيس كريم </h3>
-      <span> 25جنيه</span>
+      <h3>كونو آيس  </h3>
+      <span> 35 جنيه</span>
       <button class="order-btn"
         onclick="orderWhatsApp(this)"
-        data-name=" كوز آيس كريم "
-        data-price="25">اطلب الآن</button>
+        data-name=" كونو آيس  "
+        data-price="35">اطلب الآن</button>
     </div>
 
         <div class="card">
       <img src="imgs/ايسكريم.jpeg">
-      <h3>آيس كريم نص كيلو </h3>
-      <span>90 جنيه</span>
+      <h3>آيس كريم نصف كيلو </h3>
+      <span>100 جنيه</span>
       <button class="order-btn"
         onclick="orderWhatsApp(this)"
-        data-name=" آيس كريم نص كيلو "
-        data-price="90">اطلب الآن</button>
+        data-name=" آيس كريم نصف كيلو "
+        data-price="100">اطلب الآن</button>
     </div>
 
         <div class="card">
       <img src="imgs/ايسكريم.jpeg">
       <h3> آيس كريم كيلو</h3>
-      <span>170 جنيه</span>
+      <span>200 جنيه</span>
       <button class="order-btn"
         onclick="orderWhatsApp(this)"
         data-name=" آيس كريم كيلو "
-        data-price="170">اطلب الآن</button>
+        data-price="200">اطلب الآن</button>
     </div>
 
   </div>
@@ -463,7 +657,7 @@
         <div class="card">
       <img src="imgs/قشطوطه.jpg">
       <h3> قشطوطة قشطة</h3>
-      <span> 85جنيه</span>
+      <span> 60جنيه</span>
       <button class="order-btn"
         onclick="orderWhatsApp(this)"
         data-name=" قشطوطة قشطة "
@@ -482,24 +676,122 @@
 
         <div class="card">
       <img src="imgs/قشطوطه.jpg">
-      <h3> </h3>
-      <span> جنيه</span>
+      <h3>قشطوطة رز بلبن كيندر  </h3>
+      <span>85 جنيه</span>
       <button class="order-btn"
         onclick="orderWhatsApp(this)"
-        data-name="  "
-        data-price="">اطلب الآن</button>
+        data-name="قشطوطة رز بلبن كيندر   "
+        data-price="85">اطلب الآن</button>
     </div>
 
+            <div class="card">
+      <img src="imgs/قشطوطه.jpg">
+      <h3>قشطوطة رز بلبن لوتس  </h3>
+      <span>90 جنيه</span>
+      <button class="order-btn"
+        onclick="orderWhatsApp(this)"
+        data-name="قشطوطة رز بلبن لوتس   "
+        data-price="90">اطلب الآن</button>
+    </div>
+
+                <div class="card">
+      <img src="imgs/قشطوطه.jpg">
+      <h3>قشطوطة رز بلبن بيستاشيو  </h3>
+      <span>95 جنيه</span>
+      <button class="order-btn"
+        onclick="orderWhatsApp(this)"
+        data-name="قشطوطة رز بلبن بيستاشيو   "
+        data-price="95">اطلب الآن</button>
+    </div>
+
+                    <div class="card">
+      <img src="imgs/قشطوطه.jpg">
+      <h3>قشطوطة رز بلبن مانجو  </h3>
+      <span>85 جنيه</span>
+      <button class="order-btn"
+        onclick="orderWhatsApp(this)"
+        data-name="قشطوطة رز بلبن مانجو   "
+        data-price="85">اطلب الآن</button>
+    </div>
+
+                        <div class="card">
+      <img src="imgs/قشطوطه.jpg">
+      <h3>قشطوطة رز بلبن كريمه  </h3>
+      <span>60 جنيه</span>
+      <button class="order-btn"
+        onclick="orderWhatsApp(this)"
+        data-name="قشطوطة رز بلبن كريمه   "
+        data-price="60">اطلب الآن</button>
+    </div>
+
+       <div class="card">
+      <img src="imgs/قشطوطه.jpg">
+      <h3>قشطوطة رز بلبن سوبر لوكس  </h3>
+      <span>100 جنيه</span>
+      <button class="order-btn"
+        onclick="orderWhatsApp(this)"
+        data-name="قشطوطة رز بلبن سوبر لوكس   "
+        data-price="100">اطلب الآن</button>
+    </div>
         <div class="card">
       <img src="imgs/قشطوطه.jpg">
-      <h3> </h3>
-      <span> جنيه</span>
+      <h3>قشطوطة نوتيلا   </h3>
+      <span>75 جنيه</span>
       <button class="order-btn"
         onclick="orderWhatsApp(this)"
-        data-name="  "
-        data-price="">اطلب الآن</button>
+        data-name="قشطوطة   نوتيلا   "
+        data-price="75">اطلب الآن</button>
     </div>
 
+
+           <div class="card">
+      <img src="imgs/قشطوطه.jpg">
+      <h3>قشطوطة رز بلبن  نوتيلا  </h3>
+      <span>85 جنيه</span>
+      <button class="order-btn"
+        onclick="orderWhatsApp(this)"
+        data-name="قشطوطة رز بلبن نوتيلا    "
+        data-price="85">اطلب الآن</button>
+    </div>
+        <div class="card">
+      <img src="imgs/قشطوطه.jpg">
+      <h3>قشطوطة فراوله   </h3>
+      <span>80 جنيه</span>
+      <button class="order-btn"
+        onclick="orderWhatsApp(this)"
+        data-name="قشطوطة   فراوله   "
+        data-price="80">اطلب الآن</button>
+    </div>
+
+            <div class="card">
+      <img src="imgs/قشطوطه.jpg">
+      <h3>قشطوطة فواكهه   </h3>
+      <span>90 جنيه</span>
+      <button class="order-btn"
+        onclick="orderWhatsApp(this)"
+        data-name="قشطوطة   نوتيلا   "
+        data-price="90">اطلب الآن</button>
+    </div>
+
+            <div class="card">
+      <img src="imgs/قشطوطه.jpg">
+      <h3>قشطوطة بلوبري   </h3>
+      <span>80 جنيه</span>
+      <button class="order-btn"
+        onclick="orderWhatsApp(this)"
+        data-name="قشطوطة   بلوبري   "
+        data-price="80">اطلب الآن</button>
+    </div>
+
+            <div class="card">
+      <img src="imgs/قشطوطه.jpg">
+      <h3>قشطوطة نوتيلا   </h3>
+      <span>75 جنيه</span>
+      <button class="order-btn"
+        onclick="orderWhatsApp(this)"
+        data-name="قشطوطة   نوتيلا   "
+        data-price="75">اطلب الآن</button>
+    </div>
   </div>
 </section>
 
